# consultingprojects

./: .gitignore
RAVI/: 02_Neo4j_MCP_Configuration_Schema.txt  03_PostgreSQL_to_Neo4j_Pipeline_Code.txt  05_Persona_Ideal_Customer_Profile.txt  MAIN_UNIVERSAL WEB SCRAPING SCHEMA.txt  UPWORK-Requirement  ravis_understanding.txt
RAVI/IGNORE/: PostgreSQL to Neo4j via Claude transformation pipeline.txt  moving article data from one database to another.txt
app/: README-MCP.md  README.md  SETUP-SEQUENCE.md  complete-setup.sh  docker-compose-mcp.yml  mcp_routes_demo.py  neo4j_graph_model.cypher  requirements.txt
boomerlivingtv/: scrap_mcp_config_claude_dektop.json
boomerlivingtv/RAVI/: 00_GET_STARTED.txt  01_Content_Intelligence_Platform_Architecture.txt  01_README_PostgreSQL_to_Neo4j_Pipeline.txt  02_postgresql Schema For Universal Content Intelligence System.txt  03_execution Tree_neo4j Universal Content Intelligence Engine.txt  04_Bridge_Data_Pipeline_to_Strategic_Insights.txt  04_Universal Content Intelligence GraphRAG Tree.txt  06_GraphRAG_Query_Questions.txt  1 TREE MCP NEO4J PIPELINE TREE.txt  Architecture.pptx  STAGE 1 UNIVERSAL CONTENT INGESTION_INFRASTRUCUCTURE.txt  STAGE 2 UNIVERSAL GRAPH STRUCTURE_VALIDATION.txt  _M1 M2 Scope_Deliverables.txt  _MASTER Tree Content Intelligence System.txt  _PROJECT SCOPE.txt  _VISUAL FLOW UNIVERSAL CONTENT INTELLIGENCE SYST 2.txt
boomerlivingtv/app/: .env.example  CLAUDE_DESKTOP_SETUP.md  NEO4J_GRAPH_MODEL.md  README.md  README_CONFIG.md  README_DEPENDENCIES.md  check_dependencies.py  claude-desktop-mcp-config.json  claude_desktop_config_fixed.json  config_loader.py  docker-compose-mcp.yml  env_config.yaml  generate_full_dataset.py  insert_sample_data.sql  install_dependencies.py  load_movies_data.py  migrate_postgres_to_neo4j.py  param_config.yaml  requirements.txt  run_mcp_servers_locally.py  setup_claude_desktop.py  start-mcp.sh  test_config.py  verify_consolidation.py
boomerlivingtv/installation/: docker-compose_1.yml  (+3 more)
boomertv2/: .gitignore  BATCH_LOADER_README.md  README.md  RUNBOOK.md  analyze_duplicate_urls.py  config_boomer_load.yml  config_boomer_model.yml  config_boomer_temp.yml  cypher_queries_scrap.cql  debug_chunk_loading.py  debug_chunk_loading_offline.py  debug_chunking.py  docker-compose-neo4j-mcp.yml  embeddings_output.json  environment.yml  environment_neo4j_loader.yml  environment_postgres.yml  neo4j_backup_20250809_140352.cypher  neo4j_best_practices_summary.md  neo4j_data_loader.py  neo4j_data_loader_summary.md  neo4j_load_metrics_20250807_2.txt  neo4j_model_best_practices_20250807_200801.json  neo4j_model_generator.py  postgres_query_runner.py  requirements.txt  sample_data.txt  test_batch_loader.py  test_chunk_config.py  test_comprehensive_metrics.py  test_config_loading.py  test_failure_tracking.py  test_mcp_vector_server.py  test_metrics.txt  test_metrics_fix.py  test_neo4j_data_loader.py  test_neo4j_loader_config.py  test_neo4j_model_generator.py  test_postgres_query_runner.py  test_trending_query.py  (+2 more)
boomertv2/graphRAG-kiro/: DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
boomertv2/graphRAG-kiro/.kiro/specs/graphrag-retrieval-agent/: design.md
boomertv2/graphRAG-kiro/config/: logging.yaml
boomertv2/graphRAG-kiro/modules/: config.py  embedding.py  exceptions.py  neo4j_client.py  retrieval.py
boomertv2/graphRAG-kiro/tests/: test_data.yaml  test_runner.py
boomertv2/graphRAG-kiro/tests/fixtures/: mock_neo4j.py  mock_utilities.py
installation/: cert_creation.txt  docker-compose.yml  neo4j_auth.txt
mcp_playground/: =1.0.0  README.md  claude_config.json  docker-compose-neo4j-mcp.yml  environment.yml  mcp_playground.ipynb  mcp_vector_cypher_search.py  mcp_vector_cypher_search_v1.0.py  requirements.txt  setup.py  test_results_summary.md
obsolete/: docker-compose.yml
(+475 files in other folders)
